--- a/src/styles/ChatInterface.css
+++ b/src/styles/ChatInterface.css
@@ -1,19 +1,17 @@
 /* Style for top level container */
 #chat-container {
   background-color: #f9f9f9;
-  /* Light gray background */
-  height: calc(100vh - 200px);
-  /* Adjusted height */
+  flex-grow: 1;
   overflow-y: auto;
-  /* Enables scrolling */
 }
 
 /* Style for the message container */
 #message-container {
+  flex-grow: 1;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  min-height: 100%;
 }
 
 #chat-form {
@@ -24,6 +22,7 @@
   padding: 10px;
   background-color: #f1f1f1;
 }
+
 
 #chat-form input {
   flex-grow: 1;
@@ -65,14 +64,6 @@
   }
 }
 
-
-/* Style for the active conversation */
-.list-group-item.active {
-  background-color: #007bff;
-  /* Blue background for active item */
-  color: white;
-  /* White text for active item */
-}
 
 /* Style for the sliding menu */
 .slide-menu {
